# cwayMCP

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGES.md  CHATGPT_INTEGRATION.md  CHATGPT_QUICKSTART.md  CHATGPT_SETUP.md  DASHBOARD_LOGGING.md  Dockerfile  INSTALLATION.md  MILESTONE_100_TOOLS.md  Makefile  PHASE_3_2_COMPLETION_SUMMARY.md  PHASE_3_3_COMPLETION_SUMMARY.md  PR_PER_USER_SSO.md  QUICK_START_DASHBOARD.md  README.md  REFACTORING_IMPLEMENTATION_GUIDE.md  REST_API.md  SSE_BRANCH.md  TESTING_POLICY.md  UNIT_TEST_COVERAGE_SUMMARY.md  VERIFICATION.md  WARP.md  WARP_SETUP.md  clean.sh  docker-compose.yml  mcp-server-config.json  register-chatgpt-mcp.sh  register-mcp-server.sh  run_server.py  start-dashboard.sh  start-mcp.sh  start-sse-server.sh  warp-mcp-config.json
server/: .env.example  .env.oauth2.example  CHANGELOG_CONFIRMATION.md  README.md  REFACTORING_COMPLETE.md  indexing_config.json  main.py  pyproject.toml  requirements.txt  run_mcp_server.py  show_kpis.py  start_mcp_sse.py  start_rest_api.py  start_server_with_dashboard.py  test_dashboard_logging.py  test_websocket_client.py
server/.warp/: launch.yaml  mcp.yaml  project.yaml  tasks.yaml
server/config/: settings.py
server/docs/: COMPREHENSIVE_KPI_OVERVIEW.md  CONFIRMATION_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  MULTI_USER_SETUP.md  NEXT_STEPS_ROADMAP.md  OAUTH2_DEPLOYMENT.md  OAUTH2_QUICKSTART.md  SESSION_SUMMARY_PHASE_2_3.md  TEMPORAL_DATA_ARCHITECTURE.md  TEST_COVERAGE_PROGRESS.md  TOOL_CATALOG.md  WARP_OAUTH2_GUIDE.md  graphql_schema_full.json  graphql_schema_readable.json
server/examples/: temporal_data_demo.py
server/scripts/: README_AUTH_SCRIPTS.md  audit_api_coverage.py  cway_login.py  cway_logout.py  cway_whoami.py  export_openapi.py  introspect_schema.py  introspect_schema.sh  manage_tokens.py  oauth_login.py  oauth_logout.py
server/src/application/: archive_operations.py  (+9 more)
server/tests/: conftest.py
(+130 files in other folders)
